{
    "name": "Player",
    "maps": [
        {
            "name": "PlayerInput",
            "id": "00de1cb9-134b-483b-a30e-bf1b69f22c6e",
            "actions": [
                {
                    "name": "Jump0",
                    "type": "PassThrough",
                    "id": "fd3aafbf-8424-4c7e-b5ac-9d4a8b1cf5e5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump1",
                    "type": "PassThrough",
                    "id": "cc448775-86cc-45c6-a037-a38e7243e796",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump2",
                    "type": "PassThrough",
                    "id": "29d30687-e9e0-4d54-afa4-eaa199bf7aea",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump3",
                    "type": "PassThrough",
                    "id": "36d9f425-b984-43bb-897f-708857e09c80",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "player0",
                    "type": "PassThrough",
                    "id": "2319ac46-d275-4e3f-894f-d58c162267fb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "player1",
                    "type": "PassThrough",
                    "id": "49427b49-5291-4af6-8bdc-1f13e58a31b5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "player2",
                    "type": "PassThrough",
                    "id": "d1f16b9b-42af-4842-8b47-3f8336fa9a4c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "player3",
                    "type": "PassThrough",
                    "id": "02c12fac-f5ad-48c2-a5f4-49c3036e23c6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "63f24a8d-2471-4d5b-980b-964888314f21",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "player0",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "8110eee6-e806-4ecf-945e-2ee5c3f5afc8",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "player0",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "db88ee57-6164-40d0-a679-f8927450326b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "player0",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "50b7f994-ce36-4021-87bb-6ca3a68b3126",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "player0",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c732b982-a46d-4365-8244-1e0ac0dd291b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "player0",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "IJKL",
                    "id": "4852f3ad-731b-4069-871d-1db835d54a6d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "player1",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "68a4279b-be1b-454d-b3df-522a4847b15c",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "player1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "4dbb490d-d4e5-4a3d-971b-4e4e4f124929",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "player1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f588f9d5-bc85-445e-88d5-857adce41b38",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "player1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "65e4b015-5df3-4a80-bede-1ca6054d7398",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "player1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "8456",
                    "id": "80be1e16-a885-454d-b77f-13544293a982",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "player2",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f1d5b49e-2372-49a7-b7b8-818853977e9c",
                    "path": "<Keyboard>/numpad8",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "player2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "a071c42c-f68f-427e-aef9-9690c5c12e3f",
                    "path": "<Keyboard>/numpad5",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "player2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "fd65b5a7-7b48-4412-aa63-81f4f3c86e0f",
                    "path": "<Keyboard>/numpad4",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "player2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "6d0cb3fb-2c43-4d23-b550-aeae63606e47",
                    "path": "<Keyboard>/numpad6",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "player2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Q",
                    "id": "8fd32930-c211-4893-b7ed-781f1ba0ad08",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump0",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Modifier",
                    "id": "0ee62a3c-af28-4102-9845-3761ad78e4d9",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Jump0",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Binding",
                    "id": "24a06a06-aedc-45fc-abd8-6c21fa3a61d7",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Jump0",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "U",
                    "id": "14651b97-02e2-4d4a-b5e1-776523106f3f",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump1",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Modifier",
                    "id": "58585a5c-c77e-44dd-8f31-d75c3af70ce6",
                    "path": "<Keyboard>/u",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Jump1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Binding",
                    "id": "fdbc603e-fd91-4c92-bc88-dd0b4a243beb",
                    "path": "<Keyboard>/u",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Jump1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "7",
                    "id": "079fe452-962d-40d7-980b-f5ca564ecd8f",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump2",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Modifier",
                    "id": "2fc248f4-4d67-46d0-98ee-ea4a2cb340d1",
                    "path": "<Keyboard>/numpad7",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Jump2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Binding",
                    "id": "7f0fa753-7e0c-4925-a043-af356d372ebc",
                    "path": "<Keyboard>/numpad7",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Jump2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Ctrl",
                    "id": "233f1898-3471-497f-b6d0-36a665dfba23",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump3",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Modifier",
                    "id": "8052c945-e79c-40b8-af5d-fe983c1e815b",
                    "path": "<Keyboard>/rightCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Jump3",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Binding",
                    "id": "8d042723-bbcf-4764-b071-eed9ff46c960",
                    "path": "<Keyboard>/rightCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Jump3",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "ARROWS",
                    "id": "7becfe40-ad2b-4089-83b2-be9317b19875",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "player3",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f42c33cf-6bc4-41cb-901a-5e936dc5851e",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "player3",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "733b9115-2c14-4268-8613-05c1d8b1afe3",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "player3",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "9a646c7a-33f5-4ede-bde8-4cbfd0f411d4",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "player3",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f9d24506-8f1b-42e4-ae43-b79b06678cf9",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "player3",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}